5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1836_1277.log
== TEST (2019-07-01 15:29:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(y==vet[i]):
		a=1
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:30:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(y==vet[i]):
		a=1
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
0.965692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:30:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(y==vet[i]):
		a=1
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.15909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=1
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.2279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=1
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
0.760577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
0.947005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.21102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	elifif(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
0.867552
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 17
    elifif(y==vet[i]):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	elif(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.19391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:31:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	elif(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.19898
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:31:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
		if(y==vet[i]):
			b=i
		
print(mat[a,b])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:32:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
		if(y==vet[i]):
			b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.17359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:32:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,1,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
		if(y==vet[i]):
			b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.05269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:32:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.18451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:33:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in rang(7):
	if(x==vet[i]):
		a=i
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.16222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 14, in <module>
    for i in rang(7):
NameError: name 'rang' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:34:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(x==vet[i]):
		a=i
	if(y==vet[i]):
		b=i
		
print(mat[a,b])
-- EXECUTION TIME:
1.05098
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
